client/src/NewActivities.css
body {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    font-family: 'Roboto';
    background-color: #0B0533;
    /* background: #1b1b1b; */
    /* color: #e2e2e2; */
}

h1 {
    color: #DD9313;
}

p {
    margin-bottom: 0rem;
    line-height: normal;
}

.activities-slide-inner {
    position: relative; /* Positioning context for absolute children */
    background-color: green;
    width: 100%; /* Full width minus padding */
    height: 100%; /* Full height minus padding */
    border-radius: 10px;
    overflow: hidden; /* Ensures no overflow */
    z-index: 10;
    cursor: pointer; /* To indicate the slide is clickable */
}

.activities-slide-inner .activities-image {
    position: absolute; /* Positioned absolutely to its parent */
    top: 0;
    left: 0;
    width: 100%; /* Full width of the parent */
    height: 100%; /* Full height of the parent */
    object-fit: fill; /* Cover the whole area without losing aspect ratio */
}

.activities-hover-caption {
    display: none; /* Hide caption by default */
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.8); /* Semi-transparent grey overlay */
    color: white;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 1.5rem;
    z-index: 20; /* Make sure it's above the image */
    transition: opacity 0.3s ease; /* Smooth transition for hover effect */
  }
  
  .activities-slide:hover .activities-hover-caption {
    display: flex; /* Show caption on hover */
    opacity: 1;
  }
  
  .activities-slide:hover {
    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Grey shadow on hover */
  }
  

  
  .activities-handles svg path{
      stroke:#e2e2e2!important;
  }
  
   .activities-PostSlide-wrapper {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    max-width: 1300px;
    margin: auto;
    width: 100%;
}

    .activities-title-container {
        width: 100%; /* Make it as wide as the .PostSlide container */
        text-align: center;
        margin-bottom: 20px; /* Distance from the title to the .PostSlide */
        /* Add more styling as needed */
        /* background-color: plum; */
        color: red;
    }

  .activities-PostSlide {
      max-width: 1300px;
      margin: 10px auto 40px;
      /* background-color: aqua; */
  }
  
  .activities-PostSlide .activities-innerContainer .activities-slider {
      display: flex;
      width: 1280px;
      overflow-x: hidden;
      margin: auto;
      /* background-color: pink; */
      position: relative;
      z-index: 2;
      align-items: center;
  }
  
  .activities-PostSlide .activities-innerContainer .activities-slider .activities-slide {
      /* display: block;
      background-size: cover!important;
      background-position: center center!important;
      min-width: 280px;
      
      height: 340px;
      margin: 0 10px;
      background-color: yellow;
      border-radius: 10px; */

      display: flex;
        justify-content: center;
        align-items: center;
        background-size: cover!important;
        background-position: center center!important;
        min-width: 280px;
        height: 340px;
        margin: 0 10px;
        /* background-color: yellow; */
        padding: 20px; 
        box-sizing: border-box;
        border-radius: 10px;
  }

  .activities-PostSlide .activities-innerContainer .activities-handles {
    display: flex;
    justify-content: space-between;
    position: relative;
    /* top: -230px; */
    top: -190px;
    width: 103%;
    cursor: pointer;
    margin-right: -20px;
    margin-left: -20px;
    /* z-index:0; */
}

/* Add a transparent tap highlight color for other browsers */
.activities-PostSlide .activities-innerContainer .activities-handles:focus-visible {
    outline: none;
}
  
  .activities-PostSlide .activities-slider * {
    -webkit-user-drag: none;
    -ms-user-select: none; /* Move -ms-user-select above user-select */
    -webkit-user-select: none;
    user-select: none;
    -moz-user-select: none;
    -webkit-user-select: none;
}

  .activities-PostSlide .activities-handles > span {
      transition: opacity 0.3s;
  }
  
  .activities-PostSlide .activities-handles .activities-prev {
      opacity: 1;
  }
  
  .activities-PostSlide .activities-handles .activities-next {
      opacity: 1;
  }
  
  .activities-PostSlide .activities-handles * {
    -webkit-user-select: none;
    user-select: none;
  }
  
  .activities-PostSlide .activities-innerContainer .activities-slider .activities-slide {
      display: flex!important;
      flex-direction: column;
      justify-content: space-between;
  }
  
  
  
  .activities-PostSlide .activities-innerContainer,
  .activities-PostSlide .activities-slider,
  .activities-PostSlide .activities-handles,
  .activities-PostSlide .activities-dots {
      direction: ltr;
  }
  
  /* .activities-PostSlide .activities-innerContainer .activities-slider .activities-slide>div {
      display: block;
      background-size: cover!important;
      background-position: center center!important;
      min-width: 100%;
      height: 100%;
      border-radius: 80px;
  } */
  
  /* Existing styles for NewActivities component */
/* ...Your existing CSS... */

/*POPUP CODE*/
.activities-popup-overlay {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.75); /* Dim the background */
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1000; /* Make sure it's above other content */
}

.activities-popup-content {
    background-color: #0B0533;
    padding: 20px;
    border-radius: 10px;
    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
    width: 60%; /* Adjust as needed */
    height: 95%; /* Adjust as needed */
    text-align: center;
    display: flex;
    flex-direction: column; /* Stack children vertically */
    justify-content: space-around;
    align-items: center;
    overflow: hidden; /* Ensures no overflow */
}

.activities-popup-header, .activities-popup-body, .activities-popup-footer {
    width: 100%; /* Take full width of the parent */
}

.activities-popup-header {
    /* Style as needed */
    color: white;
    /* background-color: orange; */
    margin-bottom: 20px;
}

.activities-popup-body {
    flex-grow: 1; /* Take available space */
    display: flex; /* Use flexbox to arrange children */
    flex-direction: column; /* Stack container and caption vertically */
    justify-content: flex-start; /* Start children at the top of the container */
    align-items: center; /* Center children horizontally */
    /* background-color: pink; */
    padding: 22px; /* Add some padding around the slides */
    border-radius: 10px;
    width: 95%;
    /* height: 200px; */
}

.activities-popup-slides-container {
    align-items: center;
    /* background-color: purple; */
    display: flex; /* Use flexbox to arrange children in a row */
    justify-content: space-between; /* Space out children */
    width: 100%; /* Take the full width to align the slides in a row */
    height: calc(100% - 10px); /* Adjust height based on the caption and padding */
    margin-bottom: 10px;
}

.activities-popup-slide {
    width: 32%; /* Each slide takes up 32% of the popup-body width */
    height: 100%; /* Adjust the height as needed */
    background-color: white;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 10px;
}

.activities-popup-image {
    width: 100%; /* Full width of the parent */
    height: 100%; /* Full height of the parent */
    object-fit: fill; /* Cover the whole area without losing aspect ratio */
    border-radius: 10px;
}


/* Remove outer margins for the first and last slide */
.activities-popup-slide:first-child, .activities-popup-slide:last-child {
    margin-left: 0;
    margin-right: 0;
}

.activities-popup-slide-caption {
    color: white; /* Text color */
    text-align: center; /* Center the caption text */
    width: 100%; /* Take the full width of the body */
    /* Add additional styling as needed */
    /* background-color: lightgreen; */
    padding-top: 10px;
}

.activities-popup-footer {
    margin-top: 10px;
    /* background-color: aqua; */
    border-radius: 10px;
    /* Style as needed */
}

.activities-popup-footer button {
    margin: 10px 0;
    padding: 5px 10px;
    border: none;
    background-color: #f2f2f2;
    cursor: pointer;
}

.activities-popup-footer button:hover {
    background-color: #e2e2e2;
}

@media (min-width: 1280px){
    .activities-PostSlide .activities-innerContainer .activities-slider{
        width: 1200px!important;
        margin: auto;
    }
}

@media (max-width: 1280px){
    .activities-PostSlide .activities-innerContainer .activities-handles{
        width: calc(100% + 30px)!important;
        margin-left: -15px!important;
        margin-right: -15px!important;
    }
}

@media (min-width: 960px) and (max-width: 1280px){
    .activities-PostSlide .activities-innerContainer .activities-slider{
        width: 960px!important;
    }
}

@media (min-width: 960px) and (max-width: 1280px){
    .activities-PostSlide .activities-innerContainer .activities-slider{
        width: 960px!important;
    }
}

@media (min-width: 640px) and (max-width: 960px){
    .activities-PostSlide .activities-innerContainer .activities-slider{
        width: 640px!important;
    }
}

@media (max-width: 640px){
    .activities-PostSlide .activities-innerContainer .activities-slider{
        width: 300px!important;
    }
}

@media (max-width: 1100px) {
    .activities-popup-slides-container {
      flex-direction: column; /* Stack slides vertically */
    }
  
    .activities-popup-slide {
      width: 100%; /* Each slide takes the full width of the popup-body */
      margin-bottom: 10px; /* Add space between slides */
    }
  
    /* Adjust the last-child to remove the margin at the bottom */
    .activities-popup-slide:last-child {
      margin-bottom: 0;
    }
  }
  

